# miro

./: .gitignore  Cargo.toml  NOTE.md  README.md  miro-feat.md  miro-fix-feat.md  miro-fix-plan.md  miro-manual.md  miro-plan.md  miro-theme-feat.md  miro-theme-plan.md
.github/workflows/: release.yml
docs/: miro-release-feat.md  miro-release-plan.md
docs/superpowers/plans/: 2026-04-18-opencode-session-resume-fix.md
docs/superpowers/specs/: 2026-04-18-opencode-session-resume-fix-design.md
scripts/: install-miro-global.sh  release.sh  write-formula.py
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  model.rs  theme.rs  tui.rs
src/provider/: claude.rs  codex.rs  mod.rs  opencode.rs
tests/: providers.rs
